# ferricom

./: .gitignore  Cargo.toml  LICENSE  README.md  nestest_diff.sh  romdump.dump  romdump_working.dump
.github/workflows/: rust-clippy.yml  rust.yml  test_coverage.yml
src/: bus.rs  cpu.rs  cpu_trace.rs  instructions.rs  main.rs  mem.rs  ppu.rs  rom.rs
src/cpu/: cpu_status_flags.rs  cpu_trace.rs  interrupt.rs  mod.rs
src/gamepad/: gamepad_register.rs  mod.rs
src/mappers/: mod.rs  nrom.rs  txrom.rs
src/ppu/: frame.rs  mod.rs  palette.rs  render.rs
src/ppu/registers/: address_register.rs  control_register.rs  mask_register.rs  mod.rs  status_register.rs
src/rom/: header.rs  mod.rs
