[package]
name = "ferricom"
version = "0.1.0"
edition = "2021"
description = "Experimental NES Emulator written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
log = "0.4.20"
rand = "0.8.5"
sdl2 = "0.35.2"
simple-logging = "2.0.2"
